--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,21 @@
 [package]
 name = "solo5-rs"
 version = "0.1.0"
+authors = ["Yusei Ito <me@yuseiito.com>"]
 edition = "2021"
+license = "MIT OR Apache-2.0"
+keywords = ["solo5", "unikernel","no-std"]
+repository = "https://github.com/yuseiIto/solo5-rs"
+categories = ["api-bindings", "memory-management","network-programming","no-std","virtualization"]
+description = "This library provides a convenient abstraction and utilities for Solo5 based unikernels."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-solo5-sys = "0.1.0"
+thiserror-no-std = "2.0.2"
+solo5-sys="0.1.0"
+
+[features]
+# Enable tlsf log printing for debugging
+tlsf_dump=[]
+net=[]
