--- a/examples/do_nothing/Makefile
+++ b/examples/do_nothing/Makefile
@@ -1,24 +1,26 @@
 CC:= x86_64-solo5-none-static-cc
 LD:= x86_64-solo5-none-static-ld
 HVT:= solo5-hvt
+ELFTOOL := solo5-elftool
 LIBNAME := do_nothing
 LIB_KERNEL := target/x86_64-unknown-none/debug/lib$(LIBNAME).a
 KERNEL_PATH := kernel.hvt
 
-$(LIB_KERNEL): src/**.rs src/*.rs Cargo.toml Cargo.lock build.rs
+kernel: manifest.o $(LIB_KERNEL) lib.o
+	$(LD) -z solo5-abi=hvt -o $(KERNEL_PATH) $(LIB_KERNEL) manifest.o ~/solo5/lib.o
+
+$(LIB_KERNEL): src/**.rs src/*.rs Cargo.toml Cargo.lock
 	cargo +nightly build --target x86_64-unknown-none
 
 manifest.c: manifest.json
-	solo5-elftool gen-manifest manifest.json manifest.c
+	$(ELFTOOL) gen-manifest manifest.json manifest.c
 
 manifest.o: manifest.c
 	$(CC) -z solo5-api=hvt -c -o manifest.o manifest.c
-kernel: $(LIB_KERNEL) manifest.o lib.o
-	$(LD) -z solo5-abi=hvt -o $(KERNEL_PATH) $(LIB_KERNEL) manifest.o ~/solo5/lib.o
 
 .PHONY: lib.o
 lib.o:
-	gcc -c ~/solo5/bindings/lib.c
+	$(CC) -c ~/solo5/bindings/lib.c
 
 .PHONY: build # yet another alias for 'make kernel'
 build:
@@ -30,3 +32,9 @@ run: ${BLOCK}
 
 .PHONY: dev
 dev: kernel run
+
+.PHONY: clean
+clean:
+	cargo clean
+	- rm manifest.c manifest.o $(KERNEL_PATH) lib.o
+	
