--- a/solo5-rs/Cargo.toml
+++ b/solo5-rs/Cargo.toml
@@ -14,6 +14,7 @@ description = "This library provides a convenient abstraction and utilities for 
 [dependencies]
 thiserror-no-std = "2.0.2"
 solo5-sys="0.1.0"
+solo5-rs-macros={path="../solo5-rs-macros"}
 
 [features]
 # Enable tlsf log printing for debugging
