--- a/solo5-rs-macros/Cargo.toml
+++ b/solo5-rs-macros/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
+proc-macro2 = "1.0.63"
 quote = "1.0.29"
 syn = { version = "1.0.86", features = ["full"] }
 
