--- a/solo5-rs/Cargo.toml
+++ b/solo5-rs/Cargo.toml
@@ -15,6 +15,7 @@ description = "This library provides a convenient abstraction and utilities for 
 thiserror-no-std = "2.0.2"
 solo5-sys="0.1.0"
 solo5-rs-macros={path="../solo5-rs-macros",features=["alloc"]}
+ethox = "0.0.2"
 
 [features]
 # Enable tlsf log printing for debugging
