--- a/solo5-rs/Cargo.toml
+++ b/solo5-rs/Cargo.toml
@@ -16,6 +16,8 @@ thiserror-no-std = "2.0.2"
 solo5-sys="0.1.0"
 solo5-rs-macros={path="../solo5-rs-macros",features=["alloc"]}
 ethox = "0.0.2"
+linked_list_allocator = "0.10.5"
+smoltcp = { version = "0.10.0", default-features = false, features = ["alloc","medium-ethernet","proto-ipv4","socket-tcp","proto-ipv4"] }
 
 [features]
 # Enable tlsf log printing for debugging
