fix: solo5-rs と solo5-rs-macrosを別々にテスト

--- a/.github/workflows/solo5-rs-macros.yml
+++ b/.github/workflows/solo5-rs-macros.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: solo5-rs-macros
     steps:
     - name: Checkout Crate
       uses: actions/checkout@v3
