--- a/.github/workflows/solo5-rs.yml
+++ b/.github/workflows/solo5-rs.yml
@@ -22,6 +22,7 @@ jobs:
       uses: dtolnay/rust-toolchain@master
       with:
         toolchain: nightly
+        targets: x86_64-unknown-none
         components: rustfmt, clippy
     - name: Run check
       run: cargo check
