--- a/.github/workflows/solo5-rs.yml
+++ b/.github/workflows/solo5-rs.yml
@@ -11,9 +11,6 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: solo5-rs
     steps:
     - name: Checkout Crate
       uses: actions/checkout@v3
@@ -33,13 +30,13 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: solo5-rs
     steps:
     - name: Checkout Crate
       uses: actions/checkout@v3
     - name: Set Toolchain
       uses: dtolnay/rust-toolchain@stable
+      with: 
+        toolchain: nightly
+        targets: x86_64-unknown-none
     - name: Run test
       run: cargo test
