--- a/solo5-rs/Cargo.toml
+++ b/solo5-rs/Cargo.toml
@@ -14,7 +14,7 @@ description = "A convenient abstraction and utilities for Solo5 based unikernels
 [dependencies]
 thiserror-no-std = "2.0.2"
 solo5-sys="0.1.0"
-solo5-rs-macros={path="../solo5-rs-macros",features=["alloc"]}
+solo5-rs-macros={version="0.1.0",features=["alloc"]}
 linked_list_allocator = "0.10.5"
 smoltcp = { version = "0.10.0", default-features = false, features = ["alloc","medium-ethernet","proto-ipv4","socket-tcp","proto-ipv4"] }
 
